fix: unreachable try-catch statement, flicker of previous page state in BESSI assessment

--- a/src/components/Nav/DropdownMenu/Dropdown.module.css
+++ b/src/components/Nav/DropdownMenu/Dropdown.module.css
@@ -40,11 +40,11 @@
 }
 
 .img:hover {
-  transform: scale(0.925);
+  transform: scale(0.96);
   transition: 0.11s;
 }
 
 .img:active {
-  transform: scale(0.85);
+  transform: scale(0.91);
   transition: 0.11s;
 }
